created html host for video

--- a/templates/assassin.html
+++ b/templates/assassin.html
@@ -5,14 +5,16 @@
     <div>
         <center>
             <video style="display: block; margin: auto; position: relative; top: 50%; transform: translateY(50%);" controls>
-            <source src={{ url_for('static', filename="cosmos_laundromat.mp4") }} type="video/mp4">
-            Your browser does not support HTML video.
+                <source src={{ url_for('static', filename="box_assassin.mp4") }} type="video/mp4">
+                Your browser does not support HTML video.
             </video>
         </center>
     </div>
 
   </body> 
+
   <script>
     document.querySelector('video').autoplay = true;
   </script>
+
 </html>
