--- a/templates/chuchotage.html
+++ b/templates/chuchotage.html
@@ -4,8 +4,8 @@
 
     <div>
         <center>
-            <video style="display: block; margin: auto; position: relative; top: 50%; transform: translateY(50%);" controls>
-            <source src={{ url_for('static', filename="cosmos_laundromat.mp4") }} type="video/mp4">
+            <video style="display: block; margin: auto; position: relative; top: 50%;" controls>
+            <source src={{ url_for('static', filename="chuchotage_movie.mp4") }} type="video/mp4">
             Your browser does not support HTML video.
             </video>
         </center>
