--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,46 +13,38 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
-
   <!-- Header -->
   <header id="portfolio">
-    <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
-    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>Available content</b></h1>
-    <div class="w3-section w3-bottombar w3-padding-16">
-      <span class="w3-margin-right">Filter:</span> 
-      <button class="w3-button w3-black">ALL</button>
-      <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
-      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
-      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
-    </div>
+      <h1><b>Available content</b></h1>
     </div>
   </header>
   
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/mountains.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('cosmos') }}><img src="https://ddz4ak4pa3d19.cloudfront.net/cache/11/47/114784105a9b180e08e117cbf2612e5b.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Cosmos Laundromat</b></p></a>
+        <p>2015</p>
+        <p>Aimed at becoming a feature film, the first episode of Cosmos Laundromat became the biggest Blender Institute production so far.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('barber') }}><img src="https://ddz4ak4pa3d19.cloudfront.net/cache/07/7c/077c975fdb404609532364dd5a2e2354.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Operation Barbershop</b></p></a>
+        <p>2017</p>
+        <p>Operation Barbershop is the first animation test for the Agent 327 project, released in 2017.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="/w3images/nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('sprite') }}><img src="https://ddz4ak4pa3d19.cloudfront.net/cache/d3/1d/d31dddfc92464cf9c92299fe86b7b71b.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Sprite Fright</b></p></a>
+        <p>2021</p>
+        <p>When a group of rowdy teenagers trek into an isolated forest, they discover peaceful mushroom creatures that turn out to be an unexpected force of nature.</p>
       </div>
     </div>
   </div>
@@ -60,24 +52,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('assassin') }}><img src="https://m.media-amazon.com/images/M/MV5BNDRhNWVjOTEtMzdiMS00OTE1LWEzOGItMzdiOWE3MjA5Zjg1XkEyXkFqcGdeQXVyMTE4NDMxMDQz._V1_.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>The Box Assassin</b></p></a>
+        <p>2020</p>
+        <p>A pizza delivery boy finds himself in the middle of a clash between a gangster boss and a legendary assassin who the boy has unknowingly delivered instead of pizza.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('neighbours') }}><img src="https://sofy.tv/upload/poster/1644507041154097327762052fa1db99f.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>The Neighbors' Window</b></p></a>
+        <p>2019</p>
+        <p>It tells the story of a middle aged woman with small children whose life is shaken up when two free-spirited twenty-somethings move in across the street.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('chuchotage') }}><img src="https://m.media-amazon.com/images/M/MV5BYTJiMTk3YzQtYThkYy00MTJjLTkzMGQtYmQ0ZTk1NDA5Mjc2XkEyXkFqcGdeQXVyNjQwNDczNQ@@._V1_.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Chuchotage</b></p></a>
+        <p>2018</p>
+        <p>During a professional conference in Prague, two interpreters in the Hungarian booth realize that only one person is listening to them. They vie for her attention.</p>
       </div>
     </div>
   </div>
@@ -100,15 +95,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>email@email.com</p>
+        <p>zuhanoforint@email.com</p>
       </div>
       <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
-        <p>Chicago, US</p>
+        <p>Budapest, HU</p>
       </div>
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-        <p>512312311</p>
+        <p>69-420</p>
       </div>
     </div>
     <hr class="w3-opacity">
