--- a/templates/sprite.html
+++ b/templates/sprite.html
@@ -5,7 +5,7 @@
     <div>
         <center>
             <video style="display: block; margin: auto; position: relative; top: 50%; transform: translateY(50%);" controls>
-            <source src={{ url_for('static', filename="cosmos_laundromat.mp4") }} type="video/mp4">
+            <source src={{ url_for('static', filename="sprite_fright.mp4") }} type="video/mp4">
             Your browser does not support HTML video.
             </video>
         </center>
