using proper poster

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -60,7 +60,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href={{ url_for('neighbours') }}><img src="https://sofy.tv/upload/poster/1644507041154097327762052fa1db99f.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href={{ url_for('neighbours') }}><img src="https://m.media-amazon.com/images/M/MV5BZjEyNjgxOGUtMmEwYi00ZjQxLWI2NGMtNDNmY2NiODk3NmU3XkEyXkFqcGdeQXVyOTgwNzIyOTU@._V1_FMjpg_UX1000_.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>The Neighbors' Window</b></p></a>
         <p>2019</p>
