--- a/templates/feast.html
+++ b/templates/feast.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html> 
 <html> 
-    <body style="background-color:black;"> 
-
+    <body style="background-color:black;">
     <div>
         <center>
             <video style="display: block; margin: auto; position: relative; top: 50%; transform: translateY(50%);" controls>
-                <source src={{ url_for('static', filename="box_assassin.mp4") }} type="video/mp4">
+                <source src={{ url_for('static', filename="feast.mp4") }} type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </center>
