--- a/templates/feast.html
+++ b/templates/feast.html
@@ -3,7 +3,7 @@
     <body style="background-color:black;">
     <div>
         <center>
-            <video style="display: block; margin: auto; position: relative; top: 50%; transform: translateY(50%);" controls>
+            <video style="display: block; margin: auto; position: relative; top: 50%;" controls>
                 <source src={{ url_for('static', filename="feast.mp4") }} type="video/mp4">
                 Your browser does not support HTML video.
             </video>
