--- a/templates/menu.html
+++ b/templates/menu.html
@@ -17,10 +17,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <header id="portfolio">
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-      <h1><b>Available content</b></h1>
+      <h1>Films playing</h1>
+      <div class="w3-row-padding w3-round-xlarge w3-left  w3-light-blue">
+        <h3><b>Short films</b></h3>
+        <h4> > industry experience,</h4>
+        <h4> > a masterpiece under 20 minutes</h4>
+      </div>
     </div>
   </header>
   
+  <br>
+
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
@@ -91,37 +98,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-large w3-grey">
-    <h4 id="contact"><b>Contact Me</b></h4>
+    <h4 id="contact"><b>Upcoming events</b></h4>
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
-        <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>zuhanoforint@email.com</p>
+        <p><b>The true experience</b></p>
+        <p>movies in black&white</p>
+        <p>without sound</p>
+      </div>
+      <div class="w3-third w3-sand">
+        <p class="w3-red"><b>Hungarian Trash</b></p>
+        <p>only the highest quality</p>
+        <p class="w3-green">of hidden trash videos</p>
       </div>
       <div class="w3-third w3-teal">
-        <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
-        <p>Budapest, HU</p>
-      </div>
-      <div class="w3-third w3-dark-grey">
-        <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-        <p>69-420</p>
+        <p><b>Open to discuss</b></p>
+        <p>the community can</p>
+        <p>plan this event</p>
       </div>
     </div>
-    <hr class="w3-opacity">
-    <form action="/action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Name</label>
-        <input class="w3-input w3-border" type="text" name="Name" required>
-      </div>
-      <div class="w3-section">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text" name="Email" required>
-      </div>
-      <div class="w3-section">
-        <label>Message</label>
-        <input class="w3-input w3-border" type="text" name="Message" required>
-      </div>
-      <button type="submit" class="w3-button w3-black w3-margin-bottom"><i class="fa fa-paper-plane w3-margin-right"></i>Send Message</button>
-    </form>
+    
   </div>
 
   <!-- Footer -->
