--- a/templates/menu.html
+++ b/templates/menu.html
@@ -132,17 +132,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <h3>Credits to</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <!-- <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px"> -->
-          <span class="w3-large">Marci</span><br>
-          <span>Who financially supported the domain <b>zuhanoforint</b></span>
+          <span class="w3-large">Gábor & Marci </span><br>
+          <span>Who financially supported the project</span>
         </li>
-        <!--
-        <li class="w3-padding-16">
-          <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Ipsum</span><br>
-          <span>Praes tinci sed</span>
-        </li>
-        --> 
       </ul>
     </div>
 
