change in event style

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,10 +15,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <!-- Header -->
   <header id="portfolio">
-    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey"><i class="fa fa-bars"></i></span>
+    
     <div class="w3-container">
       <h1>Films playing</h1>
       <div class="w3-row-padding w3-round-xlarge w3-left  w3-light-blue">
+        ongoing event:
         <h3><b>Short films</b></h3>
         <h4> > industry experience,</h4>
         <h4> > a masterpiece under 20 minutes</h4>
@@ -97,23 +98,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div> -->
 
   <!-- Contact Section -->
-  <div class="w3-container w3-padding-large w3-grey">
+  <div class="w3-container w3-grey">
     <h4 id="contact"><b>Upcoming events</b></h4>
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
-      <div class="w3-third w3-dark-grey">
+      <div class="w3-quarter w3-dark-grey" style="margin:5px">
         <p><b>The true experience</b></p>
         <p>movies in black&white</p>
         <p>without sound</p>
       </div>
-      <div class="w3-third w3-sand">
+      <div class="w3-quarter w3-sand" style="margin:5px">
         <p class="w3-red"><b>Hungarian Trash</b></p>
         <p>only the highest quality</p>
         <p class="w3-green">of hidden trash videos</p>
       </div>
-      <div class="w3-third w3-teal">
-        <p><b>Open to discuss</b></p>
-        <p>the community can</p>
-        <p>plan this event</p>
+      <div class="w3-quarter w3-teal" style="margin:5px">
+        <p><b>MTV</b></p>
+        <p>"Ladies and gentlemen,</p>
+        <p>rock and roll"</p>
       </div>
     </div>
     
@@ -124,8 +125,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>About</h3>
-      <p>Mega Stream Hub is an open-source streaming platform, using free-tier AWS clusters, free-tier Github storage and Ubuntu Linux. All the content are free and open-source.</p>
-      <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
+      <p>Mega Stream Hub is an open-source streaming platform, 
+        using free-tier AWS instances, free-tier Github storage and 
+        Ubuntu Linux.</p>
     </div>
   
     <div class="w3-third">
@@ -141,7 +143,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">Powered by <b>the community</b></div>
+  <div class="w3-black w3-center w3-padding-24">Created by <b>Gergely Hornyak</b><br>v26-04-24</div>
 
 <!-- End page content -->
 </div>
