switched barber with the_egg

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,14 +39,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>Aimed at becoming a feature film, the first episode of Cosmos Laundromat became the biggest Blender Institute production so far.</p>
       </div>
     </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a href={{ url_for('barber') }}><img src="https://ddz4ak4pa3d19.cloudfront.net/cache/07/7c/077c975fdb404609532364dd5a2e2354.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Operation Barbershop</b></p></a>
-        <p>2017</p>
-        <p>Operation Barbershop is the first animation test for the Agent 327 project, released in 2017.</p>
-      </div>
-    </div>
     <div class="w3-third w3-container">
       <a href={{ url_for('sprite') }}><img src="https://ddz4ak4pa3d19.cloudfront.net/cache/d3/1d/d31dddfc92464cf9c92299fe86b7b71b.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -55,10 +47,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>When a group of rowdy teenagers trek into an isolated forest, they discover peaceful mushroom creatures that turn out to be an unexpected force of nature.</p>
       </div>
     </div>
-  </div>
-  
-  <!-- Second Photo Grid-->
-  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href={{ url_for('feast') }}><img src="https://animaders.com/wp-content/uploads/2019/09/Feast-768x1152.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -67,6 +55,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>The love life of a man as told through the meals he gives his adopted dog, Winston.</p>
       </div>
     </div>
+
+  </div>
+  
+  <!-- Second Photo Grid-->
+  
+  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href={{ url_for('neighbours') }}><img src="https://m.media-amazon.com/images/M/MV5BZjEyNjgxOGUtMmEwYi00ZjQxLWI2NGMtNDNmY2NiODk3NmU3XkEyXkFqcGdeQXVyOTgwNzIyOTU@._V1_FMjpg_UX1000_.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -81,6 +75,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p><b>Chuchotage</b></p></a>
         <p>2018</p>
         <p>During a professional conference in Prague, two interpreters in the Hungarian booth realize that only one person is listening to them. They vie for her attention.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container">
+      <a href={{ url_for('the_egg') }}><img src="https://m.media-amazon.com/images/M/MV5BNDRlYWEzZTMtYzlhMy00ZGY5LWI2ZTEtZjYxM2M0MDljYmNjXkEyXkFqcGdeQXVyMTkwMDM1NjM@._V1_.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>RE-ENTRY</b></p></a>
+        <p>2019</p>
+        <p>A man dies in a car accident and, upon reawakening, strikes up a conversation with a god. Answers to his questions lead to an insight about the meaning of life.</p>
       </div>
     </div>
   </div>
