--- a/templates/menu.html
+++ b/templates/menu.html
@@ -108,7 +108,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>movies in black&white</p>
         <p>without sound</p>
       </div>
-      <div class="w3-quarter w3-sand" style="margin:5px">
+      <div class="w3-quarter w3-white" style="margin:5px">
         <p class="w3-red"><b>Hungarian Trash</b></p>
         <p>only the highest quality</p>
         <p class="w3-green">of hidden trash videos</p>
